add_library( opgen-mass

   P1ElementwiseMass.cpp
   P1ElementwiseMass.hpp
   P1ElementwiseMassBoundary.cpp
   P1ElementwiseMassBoundary.hpp
   P1ElementwiseMassBoundaryAnnulusMap.cpp
   P1ElementwiseMassBoundaryAnnulusMap.hpp
   P1ElementwiseMassBoundaryIcosahedralShellMap.cpp
   P1ElementwiseMassBoundaryIcosahedralShellMap.hpp
   P1ElementwiseMassIcosahedralShellMap.cpp
   P1ElementwiseMassIcosahedralShellMap.hpp
   P1ElementwiseMassParametricP1Map.cpp
   P1ElementwiseMassParametricP1Map.hpp
   P2ElementwiseMass.cpp
   P2ElementwiseMass.hpp
   P2ElementwiseMassAnnulusMap.cpp
   P2ElementwiseMassAnnulusMap.hpp
   P2ElementwiseMassBoundary.cpp
   P2ElementwiseMassBoundary.hpp
   P2ElementwiseMassBoundaryAnnulusMap.cpp
   P2ElementwiseMassBoundaryAnnulusMap.hpp
   P2ElementwiseMassBoundaryIcosahedralShellMap.cpp
   P2ElementwiseMassBoundaryIcosahedralShellMap.hpp
   P2ElementwiseMassIcosahedralShellMap.cpp
   P2ElementwiseMassIcosahedralShellMap.hpp
   P2ElementwiseMassParametricP2Map.cpp
   P2ElementwiseMassParametricP2Map.hpp
   P2PlusBubbleElementwiseMass.cpp
   P2PlusBubbleElementwiseMass.hpp
   P2PlusBubbleElementwiseMassAnnulusMap.cpp
   P2PlusBubbleElementwiseMassAnnulusMap.hpp
)
target_link_libraries( opgen-mass PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-mass PRIVATE

      avx/P1ElementwiseMassIcosahedralShellMap_applyScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_2D.cpp
      avx/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_3D.cpp
      avx/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_2D.cpp
      avx/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_3D.cpp
      avx/P2ElementwiseMassAnnulusMap_applyScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseMassIcosahedralShellMap_applyScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_2D.cpp
      avx/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_3D.cpp
      avx/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_2D.cpp
      avx/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_3D.cpp
      avx/P2PlusBubbleElementwiseMassAnnulusMap_applyScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMass_applyScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseMassParametricP1Map_toMatrixScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseMassParametricP1Map_toMatrixScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseMass_toMatrixScaled_P1ElementwiseMass_macro_2D.cpp
      noarch/P1ElementwiseMass_toMatrixScaled_P1ElementwiseMass_macro_3D.cpp
      noarch/P2ElementwiseMassAnnulusMap_toMatrixScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseMassParametricP2Map_toMatrixScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseMassParametricP2Map_toMatrixScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseMass_toMatrixScaled_P2ElementwiseMass_macro_2D.cpp
      noarch/P2ElementwiseMass_toMatrixScaled_P2ElementwiseMass_macro_3D.cpp
      noarch/P2PlusBubbleElementwiseMassAnnulusMap_toMatrixScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMass_toMatrixScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
   )

   set_source_files_properties(

      avx/P1ElementwiseMassIcosahedralShellMap_applyScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      avx/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      avx/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_2D.cpp
      avx/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_3D.cpp
      avx/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_2D.cpp
      avx/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_3D.cpp
      avx/P2ElementwiseMassAnnulusMap_applyScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseMassIcosahedralShellMap_applyScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_2D.cpp
      avx/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_3D.cpp
      avx/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_2D.cpp
      avx/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_3D.cpp
      avx/P2PlusBubbleElementwiseMassAnnulusMap_applyScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMass_applyScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
      avx/P2PlusBubbleElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-mass PRIVATE

      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_applyScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P1ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_applyScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P1ElementwiseMassBoundary_toMatrixScaled_P1ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P1ElementwiseMassIcosahedralShellMap_applyScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseMassIcosahedralShellMap_toMatrixScaled_P1ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseMassParametricP1Map_applyScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseMassParametricP1Map_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseMassParametricP1Map_toMatrixScaled_P1ElementwiseMassParametricP1Map_macro_2D.cpp
      noarch/P1ElementwiseMassParametricP1Map_toMatrixScaled_P1ElementwiseMassParametricP1Map_macro_3D.cpp
      noarch/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_2D.cpp
      noarch/P1ElementwiseMass_applyScaled_P1ElementwiseMass_macro_3D.cpp
      noarch/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_2D.cpp
      noarch/P1ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseMass_macro_3D.cpp
      noarch/P1ElementwiseMass_toMatrixScaled_P1ElementwiseMass_macro_2D.cpp
      noarch/P1ElementwiseMass_toMatrixScaled_P1ElementwiseMass_macro_3D.cpp
      noarch/P2ElementwiseMassAnnulusMap_applyScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseMassAnnulusMap_toMatrixScaled_P2ElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_applyScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryAnnulusMap_toMatrixScaled_P2ElementwiseMassBoundaryAnnulusMap_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_applyScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundaryIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassBoundaryIcosahedralShellMap_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_applyScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_0_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_0_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_1_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_1_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_2_macro_2D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_2_macro_3D.cpp
      noarch/P2ElementwiseMassBoundary_toMatrixScaled_P2ElementwiseMassBoundary_facet_id_3_macro_3D.cpp
      noarch/P2ElementwiseMassIcosahedralShellMap_applyScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseMassIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseMassIcosahedralShellMap_toMatrixScaled_P2ElementwiseMassIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseMassParametricP2Map_applyScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseMassParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseMassParametricP2Map_toMatrixScaled_P2ElementwiseMassParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseMassParametricP2Map_toMatrixScaled_P2ElementwiseMassParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_2D.cpp
      noarch/P2ElementwiseMass_applyScaled_P2ElementwiseMass_macro_3D.cpp
      noarch/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_2D.cpp
      noarch/P2ElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseMass_macro_3D.cpp
      noarch/P2ElementwiseMass_toMatrixScaled_P2ElementwiseMass_macro_2D.cpp
      noarch/P2ElementwiseMass_toMatrixScaled_P2ElementwiseMass_macro_3D.cpp
      noarch/P2PlusBubbleElementwiseMassAnnulusMap_applyScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMassAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMassAnnulusMap_toMatrixScaled_P2PlusBubbleElementwiseMassAnnulusMap_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMass_applyScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMass_computeInverseDiagonalOperatorValuesScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
      noarch/P2PlusBubbleElementwiseMass_toMatrixScaled_P2PlusBubbleElementwiseMass_macro_2D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-mass PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-mass PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-mass PUBLIC cxx_std_17)
endif ()
